2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* shadow.spec.in: Fix the source (new FTP).

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Add brackets and parenthesis.
	* src/su.c: Avoid implicit conversion of pointers to booleans.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/list.c: Remove historical comment.
	* libmisc/list.c: Added assertions for non NULL parameters.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwconv.c, src/pwunconv.c: Fail if unexpected parameters are
	provided.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Add brackets and parenthesis.
	* src/passwd.c: Avoid implicit conversion of pointers to booleans.
	* src/passwd.c: Avoid assignments in comparisons.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/groupmems.c, man/groupmems.8.xml: Added support for
	shadow groups.
	* src/groupmems.c: Use fail_exit() instead of exit().

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: The grp structure returned by gr_locate is a
	const. Duplicate this structure before working on it.
	* src/groupmems.c: Do not fail and do not display warnings if a
	close failure happens with the --list option. (Files are opened
	read-only).
	* src/groupmems.c: Avoid mixed declarations and code.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Replace the 'valid' variable by is_valid to avoid
	clashes with the valid() function.

2008-08-29  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/obscure.c: Add brackets and parenthesis.
	* libmisc/obscure.c: Avoid implicit conversion of pointers / chars to
	booleans.
	* libmisc/obscure.c: Simplify the list of if.

2008-08-28  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Fix a typo in the Usage string.
